# tiva-projects

./: .LINUX_README.txt.swp  LINUX_README.txt  README.md
Lab10_TrafficLight/: TableTrafficLight.c
Lab11_UART/: main.c
Lab6_BranchingFunctionsDelays/: Lab6.axf  Lab6.build_log.htm  Lab6.htm  Lab6.map  Lab6.uvgui.Yusef  Lab6.uvopt  Lab6_Lab6.dep  branchingfunctionsdelays.crf
Lab7_HeartBlock/: main.c
Lab9_FunctionalDebugging/: main.c
UART_to_PC/src/: startup.c
UTx_Labs/Lab11_UART/: UART.c  main.c
UTx_Labs/Lab12_TuningFork/: TuningFork.c
UTx_Labs/Lab13_DAC/: Lab13.c  Piano.c
UTx_Labs/Lab14_MeasurementOfDistance/: MeasurementOfDistance.c
UTx_Labs/Lab6_BranchingFunctionsDelays/: BranchingFunctionsDelays.c
UTx_labs/Lab11_UART/: UART.c
UTx_labs/Lab12_TuningFork/: TuningFork.c
UTx_labs/Lab13_DAC/: Sound.c
learning-tm4c123/: README.md
learning-tm4c123/UTx_labs/Lab13_DAC/: DAC.c
learning-tm4c123/UTx_labs/Lab14_MeasurementOfDistance/: ADC.c
learning-tm4c123/UTx_labs/Lab8_SwitchLEDinterface/: SwitchLEDInterface.c
learning-tm4c123/my_game/: CMakeLists.txt
learning-tm4c123/my_game/inc/: PLL.h  SysTick.h
learning-tm4c123/my_game/src/: SysTick.c
linux_blinky/src/: blinky.c
my_game/img/: sprites.txt
my_game/inc/: Nokia5110.h  Switches.h
my_game/src/: .Switches.c.swp  .syntastic_c_config  PLL.c  Switches.c  SysTick.c  main.c  startup.c
projects/UART_to_PC/: CMakeLists.txt  serial.sh
projects/UART_to_PC/src/: main.c  uart.c
tm4c123-projects/UART_to_PC/inc/: uart.h
